--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "less-loader": "^6.2.0",
     "node-sass": "^4.14.1",
     "postcss-px2rem": "^0.3.0",
     "sass-loader": "^9.0.2",
     "v-distpicker": "^1.2.7",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
